--- a/KraskalsAlgorithm/KraskalsAlgorithm.csproj
+++ b/KraskalsAlgorithm/KraskalsAlgorithm.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LogicClasses\LogicClasses.csproj" />
+  </ItemGroup>
+
 </Project>
